--- a/package.json
+++ b/package.json
@@ -1,21 +1,8 @@
 {
   "name": "toolbox",
-<<<<<<< HEAD
-  "version": "0.1.0",
-  "description": "Toolbox for TLoBT",
-  "main": "main.js",
-  "scripts": {
-    "start": "electron ."
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "electron": "^11.2.0"
-=======
   "productName": "toolbox",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "description": "Toolbox for TLoBT",
   "main": "src/index.js",
   "scripts": {
     "start": "electron-forge start",
@@ -66,7 +53,7 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "11.2.0"
->>>>>>> e18e596... Rebase using electronjs-forge
+    "electron": "11.2.0",
+    "less": "^4.1.0"
   }
 }
